# basic_web_template

./: Cargo.toml  README.md  config.json
src/: config.rs  lib.rs  main.rs
src/controller/: index_controller.rs  log.rs  mod.rs
src/dao/: db_context.rs  mod.rs
src/model/: group.rs  mod.rs  user.rs
