[package]
name = "basic_web_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio"] }
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"